<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutUsFragment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/guide_2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            >
            <TextView
                android:id="@+id/back_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wode"
                android:textColor="@color/font_normal"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_introduce"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="4dp"
            android:background="@drawable/guide_2"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logo"/>
                <View
                    android:id="@+id/line1"
                    android:layout_below="@id/iv_logo"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/pink2"
                    />
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line1"
                    android:layout_centerInParent="true"
                    android:text="@string/app_name"
                    android:padding="10dp"
                    android:textColor="@color/color_read"
                    android:textSize="16sp"/>
                <View
                    android:id="@+id/line2"
                    android:layout_below="@id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/pink2"
                    />
                <TextView
                    android:id="@+id/tv_slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line2"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:text="@string/slogan"
                    android:textColor="@color/color_read"
                    android:textSize="16sp"/>
                <View
                    android:id="@+id/line3"
                    android:layout_below="@id/tv_slogan"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/pink2"
                    />
                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line3"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:text="@string/about_version"
                    android:textColor="@color/color_read"
                    android:textSize="16sp"/>
                <View
                    android:id="@+id/line4"
                    android:layout_below="@id/tv_version"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/pink2"
                    />
                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line4"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/address"
                    android:textColor="@color/color_read"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/line5"
                    android:layout_below="@id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/pink2"
                    />
                <TextView
                    android:id="@+id/tv_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line5"
                    android:layout_centerInParent="true"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/color_read"
                    android:textSize="16sp"/>

            </RelativeLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>

</FrameLayout>