<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FeedbackFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:background="@color/pink2"
            >

            <TextView
                android:id="@+id/back_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wode"
                android:textColor="@color/font_normal"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingTop="8dp"
            android:text="@string/hint_feed_back"
            android:textColor="#888888"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#dedede" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/feed_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:background="@android:color/transparent"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:maxLength="160"
                android:paddingBottom="10dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:textColor="#555555"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="7dp"
                android:text="160"
                android:textColor="#888888"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#dedede" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/corner_btn"
            android:gravity="center"
            android:text="@string/btn_commit"
            android:textColor="@color/font_normal"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>